<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:background="@drawable/century_cine_app_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/experiece_5d_picture"
        android:layout_margin="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"
        android:textColor="#ffffff"
        android:text="@string/eperience_desc_5d"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_time_title"
        android:textColor="#ffa500"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_time_content"
        android:textColor="#ffffff"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-light"/>


</LinearLayout>